--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html dir="rtl">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Arthrocalm</title>
+<title>ARTHROCALM</title>
 <meta name="description" content="">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -42,7 +42,7 @@
         <section class="block1">
             <div class="container">
                 <h1 class="block1-header">
-                    <div class="block1-header__text block2__text-original" style="padding: 2px;">أرتروكالم - أفضل مكمل غذائي
+                    <div class="block1-header__text block2__text-original" style="padding: 2px;">ARTHROCALM - أفضل مكمل غذائي
                         طبيعي لآلام المفاصل</div>
                     <div class="block1-header__subtext">إنسَ أمر ألم المفاصل فورًا وإلى الأبد!</div>
                 </h1>
@@ -155,7 +155,7 @@
                     </li>
                 </ul>
                 <div class="block2-flex">
-                    أرتروكالم لا يحارب المشكلة فقط ، لكنه يمنع تهالك المفاصل. هذا المنتج مناسب  للمساعدة في
+                    ARTHROCALM لا يحارب المشكلة فقط ، لكنه يمنع تهالك المفاصل. هذا المنتج مناسب  للمساعدة في
                     المراحل المتأخرة.
                     <div class="block2-flex__check"></div>
                 </div>
@@ -164,17 +164,18 @@
         <section class="block3">
             <div class="container">
                 <h3 class="header">
-                    <span class="header__text">أرتروكالم- مصطلح جديد في الطب</span>
+                    <span class="header__text">ARTHROCALM- مصطلح جديد في الطب</span>
                 </h3>
                 <div class="block3__container">
                     <div class="block3__left">
                         <div class="block3__text-header">تكتب وسائل الإعلام ، مكمل غذائي طبيعي حاصل على براءة اختراع تعمل معجزات ، 
                         </div>
                         <div class="block3__text">
-                            <p><span class="bold green up">Arthrocalm أقراص طبيعية تتكون من مكونات نباتية. تحتوي على
-                                    :(نبات الكُلَّاب)مستخلص الكركمين , خلاصة الزنجبيل , مسحوق الثوم ,زيت إكليل الجبل العطري, عشب مخلب الشيطان.
+                            <p><span class="bold green up">ARTHROCALM أقراص طبيعية تتكون من مكونات نباتية. تحتوي على
+                                : مستخلص الكركمين , مستخلص الزنجبيل , مسحوق الثوم ,زيت إكليل الجبل ,  مخلب الشيطان(نبات الكُلَّاب).
+
                             </p>
-                            <p>  يتفوق Arthrocalm على المنافسين عدة مرات. المكونات
+                            <p>  يتفوق ARTHROCALM على المنافسين عدة مرات. المكونات
                                 النشطة  به تعمل بدقة أكبر على الأربطة والأوتار.
                             </p>
                         </div>
@@ -199,7 +200,7 @@
                     <ul class="block4-list">
                         <li class="block4-list__item" style="width: 84%">
                             <div class="block4-list__text">84٪ من المستخدمين توقفوا عن الشعور بآلام في الجسم بعد 20 دقيقة
-                                من تناول المكمل الغذائي أرتروكالم</div>
+                                من تناول المكمل الغذائي ARTHROCALM</div>
                             <div class="block4-list__percent">84%</div>
                         </li>
                         <li class="block4-list__item" style="width: 97%">
@@ -221,7 +222,7 @@
         <section class="block5">
             <div class="container">
                 <h3 class="header">
-                    <span class="header__text">سوف يحررك Arthrocalm للأبد من:</span>
+                    <span class="header__text">سوف يحررك ARTHROCALM للأبد من:</span>
                 </h3>
                 <ul class="block5-list">
                     <li class="block5-list__item">
@@ -330,7 +331,7 @@
                             <img src="img/list5.png" alt="">
                         </div>
                         <div class="block7-list__content">
-                            <div class="block7-list__header">زيت اكليل الجبل العطري </div>
+                            <div class="block7-list__header">زيت اكليل الجبل  </div>
                             <div class="block7-list__text"> بحتوي علي العديد من الفوائد منها حماية الكبد و الاعصاب و التخلص من ألام المفاصل علي الفور</div>
                         </div>
                     </li>
@@ -341,7 +342,7 @@
         <section class="block8">
             <div class="container">
                 <h3 class="header">
-                    <span class="header__text">رأي دكتور العظام ب Arthrocalm&nbsp;</span>
+                    <span class="header__text">رأي دكتور العظام ب ARTHROCALM&nbsp;</span>
                 </h3>
                 <div class="doc">
                     <div class="doc__text">
@@ -349,7 +350,7 @@
                             بالمفاصل. على سبيل المثال ، من بين 10 أشخاص يأتون لي، 6 مراهقين تبلغ أعمارهم 18 عامًا. إنه
                             يجعل الحياة صعبة عليهم حقًا ويؤثر على رفاههم.
                         </p>
-                        <p>ومع ذلك ، فأنا لا أدعم الأدوية أو الحقن أو العمليات الجراحية. يعتبر Arthrocalm هو الأكثر
+                        <p>ومع ذلك ، فأنا لا أدعم الأدوية أو الحقن أو العمليات الجراحية. يعتبر ARTHROCALM هو الأكثر
                             فاعلية ، وفي الوقت نفسه غير ضار بالأعضاء الأخرى. مع ذلك ، يكون مفعوله سريعًا جدًا وغير مؤلم.
                             لاحظ مرضاي تحسنًا ملحوظًا في الأسبوع الأول.
                         </p>
@@ -379,7 +380,7 @@
                         </div>
                         <div class="slick-dots"></div>
                         <div class="review__text">عندما كبر حجم ركبتي ، ناهيك عن الاحمرار والألم الشديد ، ذهبت على الفور
-                            إلى الطبيب. أوصى بArthrocalm. اعتقدت أنه مجرد هراء آخر ، مثل جميع المنتجات الجديدة ، لكنني
+                            إلى الطبيب. أوصى بARTHROCALM. اعتقدت أنه مجرد هراء آخر ، مثل جميع المنتجات الجديدة ، لكنني
                             اتبعت بطاعة توصيات الطبيب وبعد أسبوع رأيت نتائج مذهلة. أنا سعيد جدًا لأنني لم أجري عملية جراحية!
                             لقد تخلصت من هذه المشكلة خلال 5 أيام!</div>
                     </div>
@@ -392,7 +393,7 @@
                         </div>
                         <div class="review__text">لم أستطع المشي علي رجلي بأريحية  لمدة عام كامل. هذا غير مريح للغاية لأنني أعمل كعامل بناء.
                             لم أستطع تحمل تكلفة المكملات الغذائية باهظة الثمن التي يصفها جميع الأطباء. كم كنت سعيدًا عندما طلبت
-                            Arthrocalm من هذا الموقع بهذا السعر! بالطبع ، لم أكن أعتقد أن الألم سيقل بسرعة أو حتى
+                            ARTHROCALM من هذا الموقع بهذا السعر! بالطبع ، لم أكن أعتقد أن الألم سيقل بسرعة أو حتى
                             يختفي. ولكن بعد أسبوع ، صغر التورم بشكل ملحوظ. إستغرق الشفاء التام 3 أشهر!</div>
                     </div>
                     <div class="review__item">
@@ -404,7 +405,7 @@
                         </div>
                         <div class="review__text">بمجرد أن واجهت التهاب المفاصل ، اعتقدت أن المخرج الوحيد هو الجراحة.
                             بسبب بروز العظم ، كان المشي مؤلمًا ، وكانت الأنسجة متورمة وتؤلمني باستمرار. نصحني صديقي ب
-                            Arthrocalm. لقد جربته وفي نفس اليوم شعرت أن الورم بدأ يصغر. وبعد شهر اختفى! أنا بصحة جيدة!
+                            ARTHROCALM. لقد جربته وفي نفس اليوم شعرت أن الورم بدأ يصغر. وبعد شهر اختفى! أنا بصحة جيدة!
                             انظروا إلى النتيجة ، أنا ممتن جدًا!</div>
                     </div>
                 </div>
@@ -429,7 +430,7 @@
         <section class="block11">
             <div class="container">
                 <h3 class="header">
-                    <span class="header__text">كيف تطلب أرتروكالم</span>
+                    <span class="header__text">كيف تطلب ARTHROCALM</span>
                 </h3>
                 <ul class="block11-list">
                     <li class="block11-list__item">
@@ -468,7 +469,7 @@
         <section class="block1 block1--last">
             <div class="container">
                 <h1 class="block1-header">
-                    <div class="block1-header__text block2__text-original" style="padding: 2px;">أرتروكالم - أفضل مكمل غذائي
+                    <div class="block1-header__text block2__text-original" style="padding: 2px;">ARTHROCALM - أفضل مكمل غذائي
                         طبيعي 
                         لألام المفاصل
                     </div>
@@ -574,7 +575,7 @@
                 <?= countryDefault() ?>
 
                 <div class="mop_padder">
-                    <div class="mop_text"><span style="font-size: 28px;">لجميع عملائنا يوجد سعر خاص <br><strong style="color:red"> عرض خاص على Arthrocalm مع خصم 50٪</strong></span><br><br>
+                    <div class="mop_text"><span style="font-size: 28px;">لجميع عملائنا يوجد سعر خاص <br><strong style="color:red"> عرض خاص على ARTHROCALM مع خصم 50٪</strong></span><br><br>
                     </div>
                     <div class="mop_form-row">
                         <input type="text" placeholder="الاسم الكامل" name="name" id="name" class="order_data required mop_input tooltipstered" required autocomplete="off">
